<resources>
    <string name="app_name">FacebookTimeLine</string>
    <string name="post_link">https://www.google.co.uk/</string>
    <string name="post_desc">Bluck up, because change is coming to wordPress</string>
    <string name="privacy_icon_desc">privacy icon</string>
    <string name="post_time">2 hours ago</string>
    <string name="post_user_name">Patrik Yarrow</string>
    <string name="post_image">post image</string>
    <string name="user_image">user image</string>
    <string name="like_text">Like</string>
    <string name="comment_text">Comment</string>
    <string name="share_text">Share</string>
</resources>