<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="22dp">


    <!--  post header -->
    <LinearLayout
        android:id="@+id/post_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">


        <ImageView
            android:id="@+id/roundedImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/user_image"
            android:src="@drawable/circle_yellow_background" />


        <LinearLayout
            android:id="@+id/post_header_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="8dp">


            <!-- User Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:text="@string/post_user_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <!-- Post Time and Privacy Icon -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:text="@string/post_time"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/privacy_icon_desc"
                    android:src="@drawable/earth_svg" />


            </LinearLayout>


        </LinearLayout>


        <ImageView
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dots_svg" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="12dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:id="@+id/post_text"
            android:text="@string/post_desc"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:id="@+id/post_decs"
            android:text="@string/post_link"
            android:textColor="@color/light_blue"
            android:textSize="16sp" />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/yellow"
        android:id="@+id/post_img"
        android:contentDescription="@string/post_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="3">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/circle_yellow_background"
            android:backgroundTint="@color/dark_blue"
            android:padding="4dp"
            android:src="@drawable/small_thumb_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:id="@+id/number_of_likes"
            android:text="12"
            android:textColor="#B3B3B3"

            />


        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:id="@+id/number_of_shares"
            android:text="1 share" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="20dp"
            android:src="@drawable/circle_yellow_background" />

        />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_down"

            />

        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/like_svg"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:text="@string/like_text"
            android:textColor="@color/light_gray"
            android:textSize="16sp"

            />

        <Button
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/comment_svg"
            android:ellipsize="end"
            android:text="@string/comment_text"
            android:textColor="@color/light_gray"
            android:textSize="16sp"

            />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/share_svg"
            android:ellipsize="end"
            android:text="@string/share_text"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>


